--- a/Chapter 2.Rmd
+++ b/Chapter 2.Rmd
@@ -12,6 +12,7 @@ urlcolor: blue
 library(tidyverse)
 library(ggthemes)
 library(here)
+library(knitr)
 ```
 
 **2E1.** Which of the expressions below correspond to the statement: _the probability of rain on Monday_?
@@ -167,7 +168,7 @@ cards <- tibble(card = c("BB", "BW", "WW"),
                 ways = c(2, 1, 0),
                 prob = round(ways / sum(ways), 3))
 
-knitr::kable(cards)
+kable(cards)
 ```
 
 
@@ -181,7 +182,7 @@ cards <- tibble(card = c("BB", "BW", "WW", "BB"),
   summarize(ways = sum(ways),
             prob = sum(prob))
 
-knitr::kable(cards)
+kable(cards)
 ```
 
 **2M6.** Imagine that black ink is heavy,and so cards with black sides are heavier than cards with white sides. As a result, it’s less likely that a card with black sides is pulled from the bag. So again assume there are three cards: B/B, B/W, and W/W. After experimenting a number of times, you conclude that for every way to pull the B/B card from the bag, there are 2 ways to pull the B/W card and 3 ways to pull the W/W card. Again suppose that a card is pulled and a black side appears face up. Show that the probability the other side is black is now 0.5. Use the counting method, as before.
@@ -193,7 +194,7 @@ cards <- tibble(card = c("BB", "BW", "WW"),
                 updated_ways = ways * weight,
                 prob = round(updated_ways / sum(updated_ways), 3))
 
-knitr::kable(cards)
+kable(cards)
 ```
 
 **2M7.** Assume again the original card problem, with a single card showing a black side face up. Before looking at the other side, we draw another card from the bag and lay it face up on the table. The face that is shown on the new card is white. Show that the probability that the first card, the one showing a black side, has black on its other side is now 0.75. Use the counting method, if you can. _Hint: Treat this like the sequence of globe tosses, counting all the ways to see each observation, for each possible first card._
@@ -205,8 +206,76 @@ cards <- tibble(card = c("BB", "BW", "WW"),
                 updated_ways = ways_black * ways_white,
                 prob = round(updated_ways / sum(updated_ways), 3))
 
-knitr::kable(cards)
+kable(cards)
 ```
+
+**2H1.** Suppose there are two species of panda bear. Both are equally common in the wild and live in the same places. They look exactly alike and eat the same food, and there is yet no genetic assay capable of telling them apart. They differ however in their family sizes. Species A gives birth to twins $10$% of the time, otherwise birthing a single infant. Species B births twins $20$% of the time, otherwise birthing singleton infants. Assume these numbers are known with certainty, from many years of field research.
+Now suppose you are managing a captive panda breeding program. You have a new female panda of unknown species, and she has just given birth to twins. What is the probability that her next birth will also be twins?
+
+From the problem statement we know that $P(twins|A) = 0.1$, $P(twins|B) = 0.2$, and $P(A) = P(B) = 0.5$.
+
+$$P(twins) = P(twins|A)P(A) + P(twins|B)P(B)$$
+$$P(twins) = 0.5(0.1 + 0.2)$$
+$$P(twins) = 0.15$$
+$$P(A|twins) = \frac{P(twins|A)P(A)}{P(twins)}$$
+$$P(A|twins) = \frac{0.1*0.5}{0.15}$$
+$$P(A|twins) = \frac{1}{3}$$
+$$P(B|twins) = \frac{P(twins|B)P(B)}{P(twins)}$$
+$$P(B|twins) = \frac{0.2*0.5}{0.15}$$
+$$P(B|twins) = \frac{2}{3}$$
+$$P(twins) = P(twins|A)P(A|twins) + P(twins|B)P(B|twins)$$
+$$P(twins) = 0.1*\frac{1}{3} + 0.2*\frac{2}{3}$$
+$$P(twins) = \frac{1}{6}$$
+**2H2.** Recall all the facts from the problem above. Now compute the probability that the panda we have is from species A assuming we have observed only the first birth and that it was twins.
+
+$$P(twins) = P(twins|A)P(A) + P(twins|B)P(B)$$
+$$P(twins) = 0.5(0.1 + 0.2)$$
+$$P(twins) = 0.15$$
+$$P(A|twins) = \frac{P(twins|A)P(A)}{P(twins)}$$
+$$P(A|twins) = \frac{0.1*0.5}{0.15}$$
+$$P(A|twins) = \frac{1}{3}$$
+**2H3.** Continuing on from the previous problem suppose the same panda mother has a second birth and that it is not twins but a singleton infant. Compute the posterior probability that this panda is species A.
+
+From the problem statement we know that $P(twins|A) = 0.1$, $P(twins|B) = 0.2$, and $P(A) = P(B) = 0.5$. Also, from 2H1 we know that $P(A|twins) = \frac{1}{3}$ and $P(B|twins) = \frac{2}{3}$. Finally, we can rewrite $P(twins|A)$ and $P(twins|B)$ as $P(single|A) = 0.9$ and $P(single|B) = 0.8$.
+
+$$P(single) = P(single|A)P(A) + P(single|B)P(B)$$
+If the prior of having already had a twin is included, $P(A)$ becomes $P(A|twins)$ and $P(B)$ becomes $P(B|twins)$.
+
+$$P(single) = P(single|A)P(A|twins) + P(single|B)P(B|twins)$$
+$$P(single) = 0.9*\frac{1}{3} + 0.8*\frac{2}{3}$$
+$$P(single) = \frac{5}{6}$$
+$$P(A|single) = \frac{P(single|A)P(A)}{P(single)}$$
+$$P(A|single) = \frac{0.9 * \frac{1}{3}}{\frac{5}{6}}$$
+$$P(A|single) = 0.36$$
+**2H4.** A common boast of Bayesian statisticians is that Bayesian inference makes it easy to use all of the data, even if the data are of different types. So suppose now that a veterinarian comes along who has a new genetic test that she claims can identify the species of our mother panda. But the test, like all tests, is imperfect. This is the information you have about the test:
+
+  + The probability it correctly identifies a species A panda is 0.8.
+  
+  + The probability it correctly identifies a species B panda is 0.65.
+  
+The vet administers the test to your panda and tells you that the test is positive for species A. First ignore your previous information from the births and compute the posterior probability that your panda is species A. Then redo your calculation, now using the birth data as well.
+
+From the problem statement we know that $P(positive|A) = 0.80$, $P(positive|B) = 0.65$, and $P(A) = P(B) = 0.5$.
+
+$$P(positive) = P(positive|A)P(A) + P(positive|B)P(B)$$
+$$P(positive) = 0.5(0.8+0.65)$$
+$$P(positive) = 0.725$$
+$$P(A|positive) = \frac{P(positive|A)P(A)}{P(positive)}$$
+$$P(A|positive) = \frac{0.8*0.5}{0.725}$$
+$$P(A|positive) = 0.551724$$
+Now, including birth data: 
+We know from 2H3 that the posterior probability a panda is species A, given twins followed by a single birth, is $0.36$, which also makes the probability a panda is species B, under same circumstances, $1-0.36 = 0.64$.
+
+$$P(positive) = P(positive|A)P(A) + P(positive|B)P(B)$$
+$$P(positive) = 0.8*0.36 + 0.65 * 0.64$$
+$$P(positive) = 0.704$$
+$$P(A|positive) = \frac{P(positive|A)P(A)}{P(positive)}$$
+$$P(A|positive) = \frac{0.8*0.36}{0.704}$$
+$$P(A|positive) = 0.409$$
+
+
+
+
 
 
 \vspace*{\fill}
